# FlowMind

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  pom.xml
.claude/: settings.json
cicd/: harness-pipeline.yaml  sonar-project.properties
docker/: .env.example  Dockerfile.service-openapi  docker-compose.yml
docs/: ai-agent-runtime-operations.md  authorization-admin-guide.md  authorization-custom-document-patterns.md  authorization-migration-guide.md  authorization-rollout.md  business-process-closure-foundation.md  document-timeline-standard.md  frontend-design-standards.md  frontend-operation-migration.md  frontend-operation-standard.md  global-action-runtime.md  lowcode-development-acceptance.md  lowcode-production-hardening.md  org-data-permission-design.md  permission-configuration-manual.md  process-runtime-local-development.md  rbac-design.md  vben-erp-layout-standard.md
memory/: MEMORY.md  project_vision.md
openspec/: config.yaml
scripts/: openapi-lifecycle-smoke.sh  openapi-reset-demo-data.sh  start-all.ps1  start-all.sh  (+1 more)
trio-base-ai/ai-agent-orchestrator/: Dockerfile  pyproject.toml
trio-base-ai/ai-agent-orchestrator/evals/: leave-expense-v1.jsonl  thresholds.json
trio-base-ai/ai-agent-orchestrator/migrations/: V001__agent_run_and_event_store.sql
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/: __init__.py  app.py  config.py  main.py  observability.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/api/: __init__.py  dependencies.py  health.py  runs.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/clients/: __init__.py  action.py  base.py  llm_gateway.py  lowcode.py  rag.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/contracts/: __init__.py  base.py  events.py  models.py  runs.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/graphs/: __init__.py  assistant.py  domains.py  state.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/persistence/: __init__.py  checkpoints.py  repository.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/runtime/: __init__.py  governed_tools.py  graph_registry.py  node_contract.py  run_service.py  tool_registry.py
trio-base-ai/ai-agent-orchestrator/src/ai_agent_orchestrator/security/: __init__.py  context.py  redaction.py
trio-base-ai/ai-agent-orchestrator/tests/: test_architecture.py  test_assistant_graph.py  test_contracts_and_registries.py  test_evaluation_gate.py  test_main.py  test_repository.py  test_security_controls.py
trio-base-ai/ai-intent-router/: pyproject.toml
trio-base-ai/ai-intent-router/src/ai_intent_router/: __init__.py
trio-base-ai/ai-llm-gateway/: Dockerfile  pyproject.toml
trio-base-ai/ai-llm-gateway/src/ai_llm_gateway/: __init__.py  config.py  main.py  observability.py
trio-base-ai/ai-llm-gateway/src/ai_llm_gateway/middleware/: data_masking.py  prompt_logging.py
trio-base-ai/ai-llm-gateway/src/ai_llm_gateway/models/: chat.py
trio-base-ai/ai-llm-gateway/src/ai_llm_gateway/routes/: chat.py  health.py
trio-base-ai/ai-llm-gateway/src/ai_llm_gateway/services/: cache_service.py  llm_service.py
trio-base-ai/ai-llm-gateway/tests/: test_security_and_cache.py
trio-base-ai/ai-rag-service/: Dockerfile  pyproject.toml
trio-base-ai/ai-rag-service/src/ai_rag_service/: __init__.py  config.py  ids.py  main.py  security.py
trio-base-ai/ai-rag-service/src/ai_rag_service/db/: __init__.py  init_db.py
trio-base-ai/ai-rag-service/src/ai_rag_service/models/: __init__.py  rag.py
trio-base-ai/ai-rag-service/src/ai_rag_service/routes/: __init__.py  health.py  rag.py
trio-base-ai/ai-rag-service/src/ai_rag_service/services/: __init__.py  embedding_service.py  rag_assembly.py  rag_ingestion.py  rag_search.py
trio-base-ai/ai-rag-service/tests/: test_security_and_grounding.py
(+1707 files in other folders)
