[tool.poetry]
name = "ai-agent-orchestrator"
version = "0.1.0"
description = "多智能体编排微服务 — LangGraph + Temporal Python SDK（铁律 6：跨语言契约标准化）"
authors = ["TrioBase Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
langgraph = "^0.3.0"
langchain = "^0.3.0"
temporalio = "^1.9.0"
pydantic = "^2.10.0"
protobuf = "^5.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
