[tool.poetry]
name = "ai-intent-router"
version = "0.1.0"
description = "意图路由微服务 — 自然语言意图识别与后端服务分发"
authors = ["TrioBase Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
openai = "^1.68.0"
temporalio = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
