[tool.poetry]
name = "ai-rag-service"
version = "0.1.0"
description = "独立 RAG 微服务 — 文档接入、向量化、检索与 Prompt 组装"
authors = ["TrioBase Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
sentence-transformers = "^3.4.0"
psycopg2-binary = "^2.9.10"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
